# ugc-lifeboat-local

./: .gitignore  README.md  SECURITY_REVIEW.md  pyproject.toml
fixtures/: catalog.json
src/ugc_lifeboat_local/: __init__.py  archive.py  cli.py  dashboard.py  fixtures.py  models.py  runner.py
tests/: test_workflow.py
