[project]
name = "ugc-lifeboat-local"
version = "0.1.0"
description = "Offline UGC archive bundler with content-addressed deduplication and signed portable bundles."
requires-python = ">=3.12"
dependencies = [
  "cryptography>=46.0.3",
  "duckdb>=1.4.2",
  "jinja2>=3.1.6",
  "pydantic>=2.12.4",
  "rich>=14.2.0",
  "typer>=0.20.0",
]

[project.scripts]
ugc-lifeboat = "ugc_lifeboat_local.cli:main"

[dependency-groups]
dev = [
  "pytest>=9.0.1",
  "ruff>=0.14.6",
]

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120

